minor invoice adjustments

--- a/Frontend/src/assets/styles/cmps/_InvoiceModal.scss
+++ b/Frontend/src/assets/styles/cmps/_InvoiceModal.scss
@@ -25,6 +25,7 @@
                     i {
                         align-self: flex-end;
                         cursor: default;
+                        margin-bottom: 0.25em;
                     }
                 }
             }
