--- a/Frontend/src/assets/styles/cmps/_UserChat.scss
+++ b/Frontend/src/assets/styles/cmps/_UserChat.scss
@@ -4,7 +4,7 @@
   left: 2em;
   display: inline-block;
   z-index: 10;
-  margin-inline-start: 1em;
+  margin: 0 1em;
   border-block-end: 1px solid $clrSecondary3;
   flex-grow: 1;
 
