--- a/Frontend/src/assets/styles/pages/BuyerDashboard.scss
+++ b/Frontend/src/assets/styles/pages/BuyerDashboard.scss
@@ -1,6 +1,43 @@
 .buyer-dashboard-page {
     background: $clrSecondary12;
 
+    .no-results {
+        img {
+            max-width: 500px;
+            max-height: 400px;
+            margin: 1em auto;
+        }
+
+        p {
+            color: $clrPrimary2;
+            margin-bottom: 1em;
+        }
+
+        a {
+            display: inline-block;
+            margin-top: 1em;
+            margin-bottom: 0.25em;
+            padding: 0.75em 1em;
+            background: $bgColor3;
+            color: $clrPrimary1;
+            border-radius: 5px;
+            text-transform: uppercase;
+            font-family: "macan-bold";
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s, transform 0.3s;
+
+            &:hover {
+                background-color: $clr10;
+                transform: translateY(-2px);
+                text-decoration: none;
+            }
+
+            &:active {
+                transform: translateY(1px);
+            }
+        }
+    }
+
     h3 {
         text-align: left;
         font-size: 20px;
@@ -198,14 +235,13 @@
 
             &.desktop {
                 grid-template-rows: auto 60px;
-                padding: 0.5em;
-                gap: 0.25em;
+                padding: 1em;
+                gap: 1em;
 
                 &:not(:first-child) {
                     border-top: 1px solid $clrSecondary4;
                 }
 
-                .order-id,
                 .category-name,
                 .seller-name,
                 .order-status {
@@ -221,7 +257,7 @@
                     grid-row: 1;
                     border-bottom: 1px solid $clrSecondary3;
                     letter-spacing: 0.05em;
-                    margin-bottom: 0.75em;
+                    gap: 0.25em;
                 }
 
                 .order-image {
@@ -231,6 +267,7 @@
                     img {
                         border-radius: 0.5em;
                         object-fit: cover;
+                        max-width: 60px;
                     }
                 }
 
@@ -256,6 +293,15 @@
                     grid-column: 4 / 5;
                     grid-row: 2;
                     align-items: center;
+
+                    span {
+                        a {
+                            text-overflow: ellipsis;
+                            overflow: hidden;
+                            max-width: 120px;
+                            display: block;
+                        }
+                    }
                 }
 
                 .order-status {
@@ -266,6 +312,14 @@
 
                 .order-options {
                     justify-content: space-between;
+                    align-items: center;
+
+                    span {
+                        i {
+                            width: 36px;
+                            height: 36px;
+                        }
+                    }
                 }
             }
         }
@@ -274,6 +328,7 @@
             box-shadow: 0.075em 0.125em 0.5em 0.125em $clrSecondary3;
             border-radius: 0.5em;
             border: 1px solid $clrSecondary4;
+            gap: 0;
         }
     }
 }
