--- a/Frontend/src/assets/styles/pages/_SellerDashboard.scss
+++ b/Frontend/src/assets/styles/pages/_SellerDashboard.scss
@@ -32,6 +32,7 @@
             &:hover {
                 background-color: $clr10;
                 transform: translateY(-2px);
+                text-decoration: none;
             }
 
             &:active {
