--- a/Frontend/src/assets/styles/pages/_Chat.scss
+++ b/Frontend/src/assets/styles/pages/_Chat.scss
@@ -6,9 +6,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  
 
-  &.desk{
+  &.desk {
     position: relative;
     z-index: 0;
   }
@@ -53,7 +52,7 @@
         cursor: pointer;
         margin-block-end: 0.5em;
 
-        &:last-child{
+        &:last-child {
           margin: 0;
         }
 
@@ -75,6 +74,9 @@
             display: flex;
             justify-content: space-between;
 
+            .name {
+              text-transform: capitalize;
+            }
             .username {
               margin-inline-start: 0.75em;
               font-size: 0.85em;
@@ -88,7 +90,7 @@
           }
 
           .last-msg {
-            max-width: 350px;
+            max-width: 250px;
             max-height: 1.75em;
             text-overflow: ellipsis;
             overflow: hidden;
@@ -99,7 +101,7 @@
 
       .erase-chat {
         position: absolute;
-        bottom: 1em;
+        bottom: 1.6em;
         right: 1em;
 
         svg {
@@ -110,30 +112,30 @@
       }
     }
   }
-  .unselected-chat{
+  .unselected-chat {
     justify-content: center;
     align-items: center;
     border: 1px solid $clrSecondary3;
     border-radius: 1.5em;
     margin-inline-start: 1em;
     flex-grow: 1;
-    .info-message{
+    .info-message {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       color: $clrSecondary8;
-      img{
+      img {
         height: 200px;
       }
-      .title{
+      .title {
         font-size: 1.5em;
         font-weight: 600;
         line-height: 32px;
         margin-block-start: 32px;
         margin-block-end: 10px;
       }
-      .subtitle{
+      .subtitle {
         width: 21em;
         text-align: center;
       }
