--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -500,8 +500,9 @@
 
   .dashboard-container {
     .seller-summary {
-      #orders-info-content > div:nth-child(1),
-      #earnings-content > div:nth-child(1) {
+
+      #orders-info-content>div:nth-child(1),
+      #earnings-content>div:nth-child(1) {
         .info-area {
           @media (max-width: 1400px) {
             grid-template-columns: repeat(3, 1fr);
@@ -585,6 +586,7 @@
     }
 
     .user-orders {
+
       // Desktop
       .user-order-container {
         &.desktop {
@@ -613,6 +615,7 @@
 
 .gig-index {
   @media (max-width: 1400px) {
+
     .gig-results-title,
     .selected-filters-wrapper,
     .gig-list {
@@ -909,6 +912,7 @@
       form {
         .form-inputs {
           .input-group {
+
             &:nth-of-type(3),
             &:nth-of-type(4) {
               grid-template-columns: 1fr 1fr;
@@ -1016,9 +1020,11 @@
 
   .buyer-orders-list {
     .buyer-order {
+
       &.mobile,
       &.mini-tablet {
         @media (max-width: 480px) {
+
           .order-id,
           .category-name,
           .seller-name,
@@ -1099,6 +1105,7 @@
       width: 100%;
     }
   }
+
   .unselected-chat {
     @media (min-width: 601px) {
       display: flex;
@@ -1183,11 +1190,13 @@
             @media (max-width: 450px) {
               position: relative;
               bottom: 48px;
+
               .input-container {
                 textarea {
                   max-height: 2.75em;
                 }
               }
+
               .message-options {
                 padding: 0.5em 0 !important;
               }
@@ -1197,18 +1206,14 @@
       }
     }
   }
+
   .user-info {
     @media (min-width: 1250) {
       display: none;
     }
   }
 
-  .chat-box-wrapper
-    .chat-box
-    .chat-box-container
-    .chat-container
-    .message-form
-    .message-container {
+  .chat-box-wrapper .chat-box .chat-box-container .chat-container .message-form .message-container {
     @media (min-width: 601px) {
       max-height: 550px;
       min-width: 450px;
@@ -1254,6 +1259,7 @@
 
   .modal-wrapper {
     @media (max-width: 480px) {
+
       .invoice-modal,
       .review-modal,
       .share-gig-modal {
@@ -1341,6 +1347,7 @@
       .review-modal {
         .reviewed-gig {
           .title-user-info {
+
             h3,
             h4 {
               font-size: 16px;
@@ -1356,6 +1363,7 @@
     }
 
     @media (min-width: 481px) {
+
       .invoice-modal,
       .review-modal,
       .share-gig-modal {
@@ -1455,6 +1463,7 @@
       .review-modal {
         .reviewed-gig {
           .title-user-info {
+
             h3,
             h4 {
               font-size: 21px;
